--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,6 +65,8 @@ dependencies {
 //    implementation "com.squareup.retrofit2:converter-scalars:$version_retrofit"
     implementation "com.squareup.retrofit2:converter-moshi:$version_retrofit"
 
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.9.0'
+
     // Moshi
     implementation "com.squareup.moshi:moshi-kotlin:$version_moshi"
 
