--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,7 +64,7 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:$version_retrofit"
 //    implementation "com.squareup.retrofit2:converter-scalars:$version_retrofit"
     implementation "com.squareup.retrofit2:converter-moshi:$version_retrofit"
-
+    // Для возможности логирования запросов Retrofit по тегу OkHttp
     implementation 'com.squareup.okhttp3:logging-interceptor:3.9.0'
 
     // Moshi
